@@ -344,3 +344,4 @@ d= TruncatedDistribution(TruncatedDistribution(WeibullMin(beta = 1, alpha = 1, g
 d= TruncatedDistribution(Beta(alpha = 1.5, beta = 6.3, a = -1, b = 2), bounds = [-2.5, 6]) simplified= Beta(alpha = 1.5, beta = 6.3, a = -1, b = 2)
 after setbounds q@0.9= [29.628]
 proba=0.001382
+q@0.1= [0.425]
