@@ -29,6 +29,7 @@
  * #1847 (ParametricFunction require unnecessary function evaluations)
  * #1861 (Still some instabilities in Kriging with ot.StationaryFunctionalCovarianceModel)
  * #1864 (FORM - IMPORTANCE FACTOR)
+ * #1870 (TruncatedDistribution fails to compute quantiles)
 
 
 == 1.17 release (2021-05-12) == #release-1.17
